SERVER-11492 Prevent running {getLastError:1, help:1} from resetting the connection's last error.

This was messing up the GLE reporting in SyncClusterConnection which runs commands with help to
determine their lock type.  This in turn was breaking the authz data upgrade process.